--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/ust_poc1
 spring.datasource.username=root
 spring.datasource.password=root
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
